# Backend_securetask_api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py
app/: config.py  deps.py  main.py  schemas.py  security.py  seed.py
app/db/: models.py  session.py
app/routes/: auth.py  metrics.py  tasks.py
tests/: conftest.py  test_health.py
